--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <title>DSAtlas</title>
 
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="apple-touch-icon" sizes="57x57" href="/assets/img/favicon/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="/assets/img/favicon/apple-icon-60x60.png">
@@ -42,6 +43,8 @@
 
   <link rel="stylesheet" type="text/css" href="assets/css/main.css" />
 
+  <script type="text/javascript" src="/assets/data/us-states.js"></script>
+
   <script type="text/javascript" src="node_modules/jquery/dist/jquery.min.js"></script>
   <script type="text/javascript" src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 
@@ -53,7 +56,6 @@
 
   <script type="text/javascript" src="node_modules/leaflet/dist/leaflet.js"></script>
   <script type="text/javascript" src="node_modules/leaflet.markercluster/dist/leaflet.markercluster.js"></script>
-
 
   <script type="text/javascript" src="app/app.module.js"></script>
   <script type="text/javascript" src="app/app.config.js"></script>
