--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
 
   <link rel="stylesheet" type="text/css" href="assets/css/main.css" />
 
-  <script type="text/javascript" src="/assets/data/us-states.js"></script>
 
   <script type="text/javascript" src="node_modules/jquery/dist/jquery.min.js"></script>
   <script type="text/javascript" src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
@@ -57,6 +56,7 @@
   <script type="text/javascript" src="node_modules/@uirouter/angularjs/release/angular-ui-router.min.js"></script>
 
   <script type="text/javascript" src="node_modules/leaflet/dist/leaflet.js"></script>
+  <script type="text/javascript" src="node_modules/leaflet-ajax/dist/leaflet.ajax.min.js"></script>
   <script type="text/javascript" src="node_modules/leaflet.markercluster/dist/leaflet.markercluster.js"></script>
 
   <script type="text/javascript" src="app/app.module.js"></script>
