--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
   <link rel="stylesheet" type="text/css" href="node_modules/leaflet/dist/leaflet.css" />
   <link rel="stylesheet" type="text/css" href="node_modules/leaflet.markercluster/dist/MarkerCluster.css" />
 
-  <link rel="stylesheet" type="text/css" href="assets/css/main.css" />
-
+  <link rel="stylesheet" type="text/css" href="assets/scss/main.css" />
 
   <script type="text/javascript" src="node_modules/jquery/dist/jquery.min.js"></script>
   <script type="text/javascript" src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
@@ -78,7 +77,7 @@
 
 </head>
 
-<body ng-cloak ng-app="dsatlas.app" ng-controller="AppController as vm" ng-init="vm.init()">
+<body ng-cloak ng-app="dsatlas.app" ng-controller="AppController as vm" >
   <div ui-view></div>
   <div ng-include="'app/shared/views/nav.html'"></div>
 </body>
