--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
   <script type="text/javascript" src="node_modules/leaflet-ajax/dist/leaflet.ajax.min.js"></script>
   <script type="text/javascript" src="node_modules/leaflet.markercluster/dist/leaflet.markercluster.js"></script>
 
+  <script type="text/javascript" src="node_modules/angular-recaptcha/release/angular-recaptcha.js"></script>
+
   <script type="text/javascript" src="app/app.module.js"></script>
   <script type="text/javascript" src="app/app.config.js"></script>
   <script type="text/javascript" src="app/app.routes.js"></script>
@@ -77,7 +79,7 @@
 
 </head>
 
-<body ng-cloak ng-app="dsatlas.app" ng-controller="AppController as vm" >
+<body ng-cloak ng-app="dsatlas.app" ng-controller="AppController as vm">
   <div ui-view></div>
   <div ng-include="'app/shared/views/nav.html'"></div>
 </body>
